Created the basic open source micro service TCP server for the micro devices

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,21 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.externalToolBuilders
+logs
+project/project
+project/target
+**/target
+tmp
+.history
+**/.idea
+**/.vertx
+**/*.iml
+/out
+**/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
+/.metadata
+*.log
+*.log.*
+/bin/
+dependency-reduced-pom.xml
